<resources>
    <string name="app_name">Project 21 of Android Dev_ListView2</string>
    <string name="welcome_back">Welcome Back...!</string>
    <string name="advance_listview_in_android">Advance ListView \nin Android</string>
    <string name="user_name">User Name</string>
    <string name="user_last_message">User Last Message</string>
    <string name="user_last_message_time">User Last Message Time</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="_4_45_pm">4:45 PM</string>
    <string name="hey_vishu_i_am_good">Hey Vishu I am good</string>
    <string name="ritikcoder">RitikCoder</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="codewithchat">CodeWithChat</string>
</resources>