<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/img_0"
        app:civ_border_width="2dp"
        android:layout_margin="5dp"
        app:civ_border_color="#FF000000"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewForName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#DCC8C8"
            android:layout_margin="5dp"
            android:text="@string/ritikcoder" />

        <TextView
            android:id="@+id/textViewForLastMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:textColor="#CFB2B2"
            android:layout_marginVertical="20sp"
            android:text="@string/hey_vishu_i_am_good" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewForLastMessageTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="35dp"
        android:layout_marginTop="8dp"
        android:textColor="#CFB2B2"
        android:text="@string/_4_45_pm"
        tools:ignore="RtlSymmetry" />

</LinearLayout>