<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/list_view_bg"
    tools:context=".MainActivity">



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="#112F43">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"

                android:text="@string/codewithchat"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="90dp"
                    app:srcCompat="@drawable/baseline_photo_camera_24" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/baseline_search_24" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/sharp_menu_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chats"
                    android:textColor="#E79B9B"
                    android:textStyle="bold"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80sp"
                    android:text="@string/status"
                    android:textColor="#E79B9B"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80sp"
                    android:text="@string/calls"
                    android:textColor="#E79B9B"
                    android:textSize="25sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="806dp"
        tools:listitem="@layout/each_item">

    </ListView>

</LinearLayout>